feat(frontend): goals
